--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -234,15 +234,16 @@ h1,h2,h3,h4,h5 {
     font-size: 16px;
   }
   svg {
-    width: 38px;
-    height: 28px;
+    width: 130px;
+    height: 35px;
     fill: currentColor;
-    object-fit: contain;
+    // object-fit: contain;
     margin-right: 15px;
     @include breakpoint(phone) {
-      width: 45px;
+      width: 130px;
       height: 35px;
     }
+    // mix-blend-mode: difference;
   }
 }
 
