--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -103,7 +103,7 @@ input[type=number] {
     -moz-appearance:textfield; /* Firefox */
 }
 
-input, textarea, button, select {
+input, textarea, button {
   border: none;
   background: none;
   outline: none;
