--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -648,6 +648,8 @@ h1,h2,h3,h4,h5 {
       margin-top: auto;
       margin-bottom: 40px;
       cursor: pointer;
+      width: 100%;
+      height:600px;
       @include breakpoint(phone) {
         margin-bottom: 80px;
         margin-top: 0;
