--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -947,6 +947,8 @@ h1,h2,h3,h4,h5 {
 }
 
 .subscribe {
+  padding: auto;
+  cursor: pointer;
   .subscribe__content {
     cursor: pointer;
     padding: 35px 20px;
