--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2440,7 +2440,7 @@ h1,h2,h3,h4,h5 {
   width: 100%;
   margin: 0 auto;
   @include breakpoint(phone) {
-    width: 448px;
+    padding: 0 200px
   }
   .form-block__title {
     font-size: 22px;
@@ -2453,7 +2453,7 @@ h1,h2,h3,h4,h5 {
   .form-block__description {
     font-size: 14px;
     line-height: 165%;
-    text-align: center;
+    text-align: left;
   }
   .form {
     margin-top: 40px;
