--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2435,7 +2435,11 @@ h1,h2,h3,h4,h5 {
 .form-page {
   padding-bottom: 100px;
 }
-
+.needle {
+  background-image:url(/images/TKSLARGE1.jpg);
+  width: auto;
+  height: 500px;
+}
 .form-block {
   width: 100%;
   margin: 0 auto;
