--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,6 +26,20 @@ html,body{overflow-x:hidden !important}
   }
 }
 
+.custom-link {
+  font-style: italic;
+  font-weight: bold;
+  text-decoration: underline;
+  z-index: 100;
+}
+
+.custom-link:hover {
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: none;
+  z-index: 100;
+}
+
 @-webkit-keyframes watchAnimation {
   from { -webkit-transform: rotate(0deg) translateX(10px) rotate(0deg); }
   to   { -webkit-transform: rotate(360deg) translateX(10px) rotate(-360deg); }
@@ -88,9 +102,14 @@ html,body{overflow-x:hidden !important}
   margin: auto;
   height: 200px;
   transform: translateY(-300px); 
+  z-index: 1;
 }
 .intro svg {
   width: 80%;
+  z-index: 1;
+}
+.intro a {
+  z-index: 1;
 }
 .logo-white {
   fill: white;
